# mobile-app

./: .gitignore  CMakeLists.txt  resources.qrc
android/: AndroidManifest.xml  deployment-rules.cmake
android/res/drawable/: splash.xml  splash_screen.xml
android/res/values/: styles.xml
client/: CMakeLists.txt  resources.qrc
client/android/: AndroidManifest.xml  deployment-rules.cmake
client/android/res/values/: colors.xml  strings.xml  styles.xml
client/qml/: ARCamera.qml  AuthorizationPage.qml  CameraPage.qml  GarmentPreviewPage.qml  GarmentSelectionPage.qml  Main.qml  MainPage.qml  ScanResultPage.qml  Style.qml  qmldir
client/src/: BodyTracker.cpp  CameraFrameProcessor.cpp  CameraFrameProcessor.h  ClothFitter.cpp  ClothFitter.h  ClothScanner.cpp  ImageProcessor.cpp  ImageProcessor.h  NetworkManager.cpp  NetworkManager.h  QMLManager.cpp  QMLManager.h  main.cpp
garments/shirt/: model.mtl
qml/: CameraPage.qml  GarmentPreviewPage.qml  GarmentSelectionPage.qml  Main.qml  qmldir
server/: package-lock.json  package.json
server/src/: server.js
server/src/middlewares/: auth.js
server/src/models/: Garment.js  ImageScan.js  ModelProcessed.js
server/src/routes/: 3d-models.js  auth.js  garments.js  scans.js
src/: BodyTracker.h  ClothScanner.h  CommonTypes.h  GarmentRenderer.h  ImageConverter.cpp  ImageConverter.h  NetworkManager.cpp  NetworkManager.h  QMLManager.cpp  QMLManager.h  main.cpp
